Improve HTML page for mobile devices

--- a/templates/download_config.html
+++ b/templates/download_config.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<title>Select a configuration to load</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Select a configuration to load</title>
 </head>
 <form action="{{ url_for('getconfig') }}">
   enter your email: <input type="text" name="email"><br />
